# GodModeToggle_SDK

./: CMakeLists.txt  README_RU.txt  ScriptHookV.def
.github/workflows/: main.yml
github/workflows/: build.yml
src/: main.cpp
